# logos-lez-registry-module

./: CMakeLists.txt  README.md  flake.nix  justfile  metadata.json  result
.github/workflows/: release.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
include/: lez_registry.h
nix/: app.nix  default.nix  lib.nix
qml/: LezRegistryView.qml  ProgramCard.qml  ProgramDetail.qml  RegisterForm.qml  Theme.qml  qml.qrc
src/: i_lez_registry_module.h  lez_registry_module.cpp  lez_registry_module.h  plugin.cpp  program_list_model.cpp  program_list_model.h
